bitfield/tests/fail/overlapping-range-1.stderr
error: Bitfield range overlaps with another bitfield range
 --> tests/fail/overlapping-range-1.rs:6:17
  |
6 |         b: u8 @ 6..=7,
  |                 ^^^^^
